[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-rust>=1.5.2"]
build-backend = "maturin"

[project]
name = "gtdb_tree"
version = "0.1.1"
description = "A Python package for parsing GTDB trees using Rust"
readme = "README.md"
authors = [{ name = "dagou", email = "eric9n@gmail.com" }]
license = { file = "license" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]
keywords = ["gtdb", "tree", "parser", "rust"]
dependencies = [
    "setuptools-rust>=1.5.2",
    "cffi"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/eric9n/gtdb_tree"

[tool.setuptools]
packages = ["gtdb_tree"]
